use main instead of master in gh action

--- a/.github/workflows/gitlab_push_ci.yml
+++ b/.github/workflows/gitlab_push_ci.yml
@@ -2,13 +2,13 @@ name: Gitlab push CI
 
 on:
   push:
-    branches: master
+    branches: main
   pull_request:
     branches: '**'
 
 jobs:
   gitlab-push:
-    if: ${{github.ref == 'refs/heads/master'}}
+    if: ${{github.ref == 'refs/heads/main'}}
 
     runs-on: ubuntu-latest
 
